# orchestro-cli

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  ACTION_PLAN_NEXT_STEPS.md  API_IMPLEMENTATION_COMPLETE.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURAL_TRANSFORMATION.md  AUTOMATION_SETUP.md  AUTOMATION_STRATEGY.md  CHANGELOG.md  CHANGELOG_JUNIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCTEST_DEMO.md  DRY_RUN_IMPLEMENTATION.md  FEASIBILITY_QUICK_REFERENCE.md  FEASIBILITY_STUDY_INDEX.md  FINAL_STATUS.md  INLINE_ASSERTIONS_IMPLEMENTATION.md  INTELLIGENCE_SYSTEM_DEMO_COMPLETE.md  LAUNCH_CHECKLIST.md  LICENSE  MARKETING_REVENUE_STRATEGY.md  MISSION_ACCOMPLISHED.md  PHASE_2_COMPLETE.md  PLAYWRIGHT_MAESTRO_MERGER_FEASIBILITY.md  PRODUCTION_READY.md  QUALITY_IMPROVEMENTS_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_EXAMPLES.md  RELEASE_COMPLETE.md  RELEASE_NOTES_v0.2.0-alpha.md  RESEARCH_TEST_GENERATION_BEST_PRACTICES.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_STATE_RESEARCH.md  (+15 more)
.github/: BADGES.md  CI_CD_SETUP.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  QUICKSTART_CI.md  README.md  changelog-config.json  dependabot.yml
benchmark_results/: benchmark_report.md
benchmarks/: parallel_performance.py
docs/: API.md  API_DOCUMENTATION.md  FAQ_INTELLIGENCE.md  INLINE_ASSERTIONS_REQUIREMENTS.json  INLINE_ASSERTIONS_SPEC.md  INTELLIGENCE.md  INTELLIGENCE_QUICK_START.md  JUNIT_INTEGRATION.md  MIGRATION_TO_INTELLIGENCE.md  SCREENSHOT_SENTINEL_SPEC.md  SNAPSHOT_QUICK_REFERENCE.md  SNAPSHOT_TESTING.md  ast_analyzer_usage.md  inline-assertions.md  session-implementation-summary.md  session-testing-guide.md
examples/: DRY_RUN_GUIDE.md  INTELLIGENCE_DEMO.md  QUICK_REFERENCE.md  README.md  basic_echo.yaml  ci_cd_example.yaml  demo_intelligence.py  dry_run_demo.yaml  environment_vars.yaml  file_validation.yaml  inline_assertions_demo.yaml  invalid_scenario.yaml  multi_step_workflow.yaml  parallel_execution.py  python_repl.yaml  (+5 more)
(+145 files in other folders)
